Refactor login UI and update dependencies
Replaces the login form's layout with AbsoluteLayout, adds new buttons and labels, and updates image/icon usage. Removes all build output, distribution files, and compiled classes. Adds AbsoluteLayout and JavaFX libraries to the project, updates project properties to use the new main class, and adjusts library references.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.j
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=StudentManager
-main.class=studentmanager.Dashboard
+main.class=studentmanager.login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
