--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,3 +1,17 @@
+libs.absolutelayout.classpath=\
+    ${base}/absolutelayout/AbsoluteLayout.jar;\
+    ${base}/absolutelayout/javafx-swt.jar;\
+    ${base}/absolutelayout/javafx.base.jar;\
+    ${base}/absolutelayout/javafx.controls.jar;\
+    ${base}/absolutelayout/javafx.fxml.jar;\
+    ${base}/absolutelayout/javafx.graphics.jar;\
+    ${base}/absolutelayout/javafx.media.jar;\
+    ${base}/absolutelayout/javafx.swing.jar;\
+    ${base}/absolutelayout/javafx.web.jar;\
+    ${base}/absolutelayout/jdk.jsobject.jar;\
+    ${base}/absolutelayout/jfx.incubator.input.jar;\
+    ${base}/absolutelayout/jfx.incubator.richtext.jar
+libs.absolutelayout.displayName=Absolute Layout
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
