Add face recognition feature with OpenCV integration
Introduced new FaceCheck1 and faceCheck components, including forms, Java source files, and supporting images/icons for face recognition. Integrated OpenCV library (opencv-4120.jar and native DLL) and added the haarcascade_frontalface_default.xml classifier for face detection. Updated Dashboard and login forms to support the new feature.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/StudentManager
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.11.jar=lib/mysql-connector-java-8.0.11.jar
+file.reference.opencv-4120.jar=lib\\opencv-4120.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.opencv-4120.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
